--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.1.1+1  
-  socket_io_client: ^2.0.0
+  socket_io_client: ^2.0.0  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,6 +59,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets: 
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
