--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_animate: ^4.1.1+1  
   socket_io_client: ^2.0.0  
+  animated_text_kit: ^4.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
