--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_animate: ^4.1.1+1  
   socket_io_client: ^2.0.0  
   animated_text_kit: ^4.2.2
+  url_launcher: ^6.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
