--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   socket_io_client: ^2.0.0  
   animated_text_kit: ^4.2.2
 
+  percent_indicator: ^4.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
