--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_animate: ^4.1.1+1  
   socket_io_client: ^2.0.0  
   animated_text_kit: ^4.2.2
-
+  percent_indicator: ^4.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
